--- a/index.html
+++ b/index.html
@@ -1,87 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/main.css">
     <title>Eppek</title>
 </head>
+
 <body>
-    
-<header>
 
-    <!-- Navbar Start  -->
-    <nav>
-        <div class="topnav">
-            <img src="./assets/images/nav_logo.png" alt="">
-            <ul>
-                <li><a href="">Ön Sipariş</a></li>
-                <li><a href="">Online Dükkan</a></li>
-                <li><a href="">Değirmen</a></li>
-                <li><a href="">İletişim</a></li>
-            </ul>
-            <div>
-                <i class="fa-solid fa-circle-user"></i>
-                <span><a href="">Üye Girişi</a></span>
-                <i id="basketlogo" class="fa-solid fa-basket-shopping"></i>
+    <header>
+
+        <!-- Navbar Start  -->
+        <nav>
+            <div class="topnav">
+                <img src="./assets/images/nav_logo.png" alt="">
+                <ul>
+                    <li><a href="">Ön Sipariş</a></li>
+                    <li><a href="">Online Dükkan</a></li>
+                    <li><a href="">Değirmen</a></li>
+                    <li><a href="">İletişim</a></li>
+                </ul>
+                <div>
+                    <i class="fa-solid fa-circle-user"></i>
+                    <span><a href="">Üye Girişi</a></span>
+                    <i id="basketlogo" class="fa-solid fa-basket-shopping"></i>
+                </div>
             </div>
+        </nav>
+        <!-- Navbar End -->
+
+    </header>
+    <main>
+        <section class="first_section">
+            <div class="firstsectionmainbox">
+                <div id="maintext">
+                    <h2 style="color: #ffffff; font-size: 80px;font-weight: bold;">Çarşamba</h2>
+                    <p style="font-size: 40px;font-weight: bold;">11:00-19:00</p>
+                    <h2 style="color: #ffffff; font-size: 80px;font-weight: bold;">Cumartesi</h2>
+                    <p style="font-size: 40px;font-weight: bold;">10:00-18:00</p>
+                    <h2 style="color: #ffffff; font-size: 80px;font-weight: bold;">AÇIK</h2>
+                    <p style="font-size: 50px; font-weight: bold; margin-top: 30px;">ÖN SİPARİŞ İLE </p>
+                </div>
+                <div id="firstsectionitem">
+                    <div><svg preserveAspectRatio="xMidYMid meet" data-bbox="35 33 130 134" viewBox="35 33 130 134"
+                            height="150" width="150" xmlns="http://www.w3.org/2000/svg" data-type="tint"
+                            role="presentation" aria-hidden="true">
+                            <g>
+                                <path
+                                    d="M66.9 120.9l2.5 4.1-12.7 7.8-2.5-4.1 12.7-7.8zm17.4-10.6l-10.7 6.5 2.5 4.1 10.9-6.7 7.1 1.8 1.2-4.6-6.3-1.6v-10h-4.8l.1 10.5zm46.9 14.8l12.4 3.1 1.2-4.6-12.4-3.1-1.2 4.6zM165 52.6v83L113.7 167 35 147.4v-83L86.3 33h.2L165 52.6zM84.3 93.2v-9.5L39.8 72.6v64.9l9.1-5.6 2.5 4.1-11.6 7.1v.6l71.1 17.7v-41.3l-10-2.5 1.2-4.6 8.9 2.2V90.3l-21.7-5.4v8.4l-5-.1zm28.6-7.4l47.3-29v-.6L89.1 38.6v9.3h-4.8v-8.1L39.8 67.1v.6l44.5 11.1v-1.6h4.8V80l23.8 5.8zm38.4 39.4l8.9 2.2V62.5l-44.5 27.2v26.6l10 2.5-1.2 4.6-8.9-2.2v38.9l44.5-27.2v-.6l-10-2.5 1.2-4.6zm-67-54.6h4.8V54.5h-4.8v16.1z"
+                                    fill="#DE9D24"></path>
+                            </g>
+                        </svg></div>
+                    <div><svg preserveAspectRatio="xMidYMid meet" data-bbox="35 33 130 134" viewBox="35 33 130 134"
+                            height="150" width="150" xmlns="http://www.w3.org/2000/svg" data-type="tint"
+                            role="presentation" aria-hidden="true">
+                            <g>
+                                <path
+                                    d="M66.9 120.9l2.5 4.1-12.7 7.8-2.5-4.1 12.7-7.8zm17.4-10.6l-10.7 6.5 2.5 4.1 10.9-6.7 7.1 1.8 1.2-4.6-6.3-1.6v-10h-4.8l.1 10.5zm46.9 14.8l12.4 3.1 1.2-4.6-12.4-3.1-1.2 4.6zM165 52.6v83L113.7 167 35 147.4v-83L86.3 33h.2L165 52.6zM84.3 93.2v-9.5L39.8 72.6v64.9l9.1-5.6 2.5 4.1-11.6 7.1v.6l71.1 17.7v-41.3l-10-2.5 1.2-4.6 8.9 2.2V90.3l-21.7-5.4v8.4l-5-.1zm28.6-7.4l47.3-29v-.6L89.1 38.6v9.3h-4.8v-8.1L39.8 67.1v.6l44.5 11.1v-1.6h4.8V80l23.8 5.8zm38.4 39.4l8.9 2.2V62.5l-44.5 27.2v26.6l10 2.5-1.2 4.6-8.9-2.2v38.9l44.5-27.2v-.6l-10-2.5 1.2-4.6zm-67-54.6h4.8V54.5h-4.8v16.1z"
+                                    fill="#DE9D24"></path>
+                            </g>
+                        </svg></div>
+                    <div><svg preserveAspectRatio="xMidYMid meet" data-bbox="35 33 130 134" viewBox="35 33 130 134"
+                            height="150" width="150" xmlns="http://www.w3.org/2000/svg" data-type="tint"
+                            role="presentation" aria-hidden="true">
+                            <g>
+                                <path
+                                    d="M66.9 120.9l2.5 4.1-12.7 7.8-2.5-4.1 12.7-7.8zm17.4-10.6l-10.7 6.5 2.5 4.1 10.9-6.7 7.1 1.8 1.2-4.6-6.3-1.6v-10h-4.8l.1 10.5zm46.9 14.8l12.4 3.1 1.2-4.6-12.4-3.1-1.2 4.6zM165 52.6v83L113.7 167 35 147.4v-83L86.3 33h.2L165 52.6zM84.3 93.2v-9.5L39.8 72.6v64.9l9.1-5.6 2.5 4.1-11.6 7.1v.6l71.1 17.7v-41.3l-10-2.5 1.2-4.6 8.9 2.2V90.3l-21.7-5.4v8.4l-5-.1zm28.6-7.4l47.3-29v-.6L89.1 38.6v9.3h-4.8v-8.1L39.8 67.1v.6l44.5 11.1v-1.6h4.8V80l23.8 5.8zm38.4 39.4l8.9 2.2V62.5l-44.5 27.2v26.6l10 2.5-1.2 4.6-8.9-2.2v38.9l44.5-27.2v-.6l-10-2.5 1.2-4.6zm-67-54.6h4.8V54.5h-4.8v16.1z"
+                                    fill="#DE9D24"></path>
+                            </g>
+                        </svg></div>
+                </div>
+            </div>
+        </section>
+        <section class="ekmeginasiluretiyoruz">
+            <div class="all">
+                <div class="all-left">
+                    <h1 style="font-size: 63px; font-weight: 700;">EKMEĞİMİZİ NASIL ÜRETİYORUZ?
+                    </h1>
+                    <h2 style="color: #A18989;margin-top:20px">HER ŞEY TOHUMLA BAŞLIYOR!
+                    </h2>
+                    <h3 style="font-weight: 100;margin-top: 20px;">Ekmeğimizi eski ve yerel buğdayların taze olarak
+                        öğütülmüş unlarından üretiyoruz.
+                    </h3>
+                    <h3 style="font-weight: 100;margin-top: 20px;">Seçtiğimiz buğdayların her birinin bir hikayesi,
+                        kendine has tadı ve özellikleri var.
+                    </h3>
+                    <h3 style="font-weight: 100;margin-top: 20px;">Yerel çeşitliliğin sürmesi için, yerel buğdaylarla
+                        çalışmanın önemli olduğunu biliyoruz.
+                    </h3>
+                    <img style="margin-top: 100px;" src="./assets/images/mill.png" alt="">
+                    <h2 style="margin-top: 70px;">TAŞ DEĞİRMENDE ÖĞÜTÜYORUZ
+                    </h2>
+                    <h3 style="font-weight: 100;margin-top: 20px;">Tam buğday unlarımızı kendi taş değirmenimizde
+                        öğütüyoruz.
+                    </h3>
+                    <h3 style="font-weight: 100;margin-top: 20px; margin-bottom: 200px;">Tam buğday unun, beyaz una göre
+                        daha besleyici ve doyurucu olduğunu; lif, mineral ve vitaminlerin, buğdayın rüşeym ve kepek
+                        kısmında bulunduğunu biliyoruz.
+                    </h3>
+                </div>
+                <div class="all-right">
+                    <img style="width: 350px; height:260px ; margin-top: 230px  ; " src="./assets/images/w.png" alt="">
+                    <h2
+                        style=" margin-top: 20px; color: #6B5B5B;font: 1em sans-serif; font-weight: 600; font-size: 20px; ">
+                        ZEHİR KULLANMADAN YETİŞTİRİYORUZ
+                    </h2>
+                    <h6 style="margin-top: 20px; font-size: 18px; line-height: 1.3em; font-weight: 200;">Buğdaylarımızı
+                        kendimiz yetiştiriyoruz ve ot-böcek öldürücü kimyasallar kullanmıyoruz çünkü sağlıklı tohumların
+                        ve sağlıklı toprağın, sürdürülebilir bir tarımın tek yolu olduğunu düşünüyoruz.
+                    </h6>
+                    <img style="margin-top: 120px; width: 290px; height: 200px; " src="./assets/images/B.png
+                    " alt="">
+                    <h6
+                        style=" margin-top: 30px; font-size: 18px; line-height: 1.3em; font-weight: 200; font-size: 25px;">
+                        EKŞİ MAYALI
+                    </h6>
+                    <h3 style="font-weight: 100;margin-top: 30px;">Ekmeğimizi sadece ekşi maya ve tam buğday unuyla
+                        yoğuruyor, 18-40 saat kadar süren soğuk ve oda sıcaklığında fermentasyon süreçleri ile daha
+                        sağlıklı hale getiriyoruz.
+                    </h3>
+                    <h3 style="font-weight: 100;margin-top: 50px ; ">Ekşi mayalı ekmeğin sağlık ve besleyicilik
+                        bakımından birçok faydası biliniyor:
+                    </h3>
+                    <h3 style="font-weight: 100;">- daha düşük oranlarda ve sindirmesi kolay gluten
+                    </h3>
+                    <h3 style="font-weight: 100;">- daha yüksek vitamin, mineral ve besin değeri
+                    </h3>
+                    <h3 style="font-weight: 100;">- probiyotik özellikler
+                    </h3>
+                    <h3 style="font-weight: 100; margin-bottom: 50px;">- daha düşük miktarda, minerallerin emilimini
+                        zorlaştıran fitik asit.
+                    </h3>
+                </div>
+            </div>
+        </section>
+
+        <section class="onsiparis">
+            <h2 style="font-size: 30px; font-weight: bold;">Ön Siparişinizi</h2>
+            <h3 style="font-size: 100px; font-weight: 900;">Pazartesi ve Cuma</h3>
+            <h3 style="margin-top: -40px; font-size: 100px; font-weight: 900;">13:00'e</h3>
+            <h4 style="font-size: 30px; font-weight: bold;">kadar verebilirsiniz</h4>
+        </section>
+    </main>
+    <footer>
+        <ul>
+            <li><a href="">Satış Sözleşmesi</a></li>
+            <li><a href="">Ödeme ve Teslimat</a></li>
+            <li><a href="">Gizlilik Politikası</a></li>
+        </ul>
+        <div id="instalogo">
+            <div style="background-color: white; display: flex; justify-content: center; align-items: center; width: 35px; height: 35px; border-radius:100%;">
+            <a href="https://www.instagram.com/eppek__/"><i style="font-size: 22px; color: black;" class="fa-brands fa-instagram"></i></a>
+            </div>
+            <h2 style=" color: #FFFF;font-weight:lighter;"> eppek.net</h2>
         </div>
-    </nav>
-    <!-- Navbar End -->
-
-</header>
-<main>
-    <section class="first_section">
-        <div class="firstsectionmainbox">
-            <div id="maintext">
-                <h2 style="color: #ffffff; font-size: 80px;font-weight: bold;">Çarşamba</h2>
-                <p style="font-size: 40px;font-weight: bold;">11:00-19:00</p>
-                <h2 style="color: #ffffff; font-size: 80px;font-weight: bold;">Cumartesi</h2>
-                <p style="font-size: 40px;font-weight: bold;">10:00-18:00</p>
-                <h2 style="color: #ffffff; font-size: 80px;font-weight: bold;">AÇIK</h2>
-                <p style="font-size: 50px; font-weight: bold; margin-top: 30px;">ÖN SİPARİŞ İLE </p>
-            </div>
-            <div id="firstsectionitem">
-                <div><svg preserveAspectRatio="xMidYMid meet" data-bbox="35 33 130 134" viewBox="35 33 130 134" height="150" width="150" xmlns="http://www.w3.org/2000/svg" data-type="tint" role="presentation" aria-hidden="true">
-                    <g>
-                        <path d="M66.9 120.9l2.5 4.1-12.7 7.8-2.5-4.1 12.7-7.8zm17.4-10.6l-10.7 6.5 2.5 4.1 10.9-6.7 7.1 1.8 1.2-4.6-6.3-1.6v-10h-4.8l.1 10.5zm46.9 14.8l12.4 3.1 1.2-4.6-12.4-3.1-1.2 4.6zM165 52.6v83L113.7 167 35 147.4v-83L86.3 33h.2L165 52.6zM84.3 93.2v-9.5L39.8 72.6v64.9l9.1-5.6 2.5 4.1-11.6 7.1v.6l71.1 17.7v-41.3l-10-2.5 1.2-4.6 8.9 2.2V90.3l-21.7-5.4v8.4l-5-.1zm28.6-7.4l47.3-29v-.6L89.1 38.6v9.3h-4.8v-8.1L39.8 67.1v.6l44.5 11.1v-1.6h4.8V80l23.8 5.8zm38.4 39.4l8.9 2.2V62.5l-44.5 27.2v26.6l10 2.5-1.2 4.6-8.9-2.2v38.9l44.5-27.2v-.6l-10-2.5 1.2-4.6zm-67-54.6h4.8V54.5h-4.8v16.1z" fill="#DE9D24"></path>
-                    </g>
-                </svg></div>
-                <div><svg preserveAspectRatio="xMidYMid meet" data-bbox="35 33 130 134" viewBox="35 33 130 134" height="150" width="150" xmlns="http://www.w3.org/2000/svg" data-type="tint" role="presentation" aria-hidden="true">
-                    <g>
-                        <path d="M66.9 120.9l2.5 4.1-12.7 7.8-2.5-4.1 12.7-7.8zm17.4-10.6l-10.7 6.5 2.5 4.1 10.9-6.7 7.1 1.8 1.2-4.6-6.3-1.6v-10h-4.8l.1 10.5zm46.9 14.8l12.4 3.1 1.2-4.6-12.4-3.1-1.2 4.6zM165 52.6v83L113.7 167 35 147.4v-83L86.3 33h.2L165 52.6zM84.3 93.2v-9.5L39.8 72.6v64.9l9.1-5.6 2.5 4.1-11.6 7.1v.6l71.1 17.7v-41.3l-10-2.5 1.2-4.6 8.9 2.2V90.3l-21.7-5.4v8.4l-5-.1zm28.6-7.4l47.3-29v-.6L89.1 38.6v9.3h-4.8v-8.1L39.8 67.1v.6l44.5 11.1v-1.6h4.8V80l23.8 5.8zm38.4 39.4l8.9 2.2V62.5l-44.5 27.2v26.6l10 2.5-1.2 4.6-8.9-2.2v38.9l44.5-27.2v-.6l-10-2.5 1.2-4.6zm-67-54.6h4.8V54.5h-4.8v16.1z" fill="#DE9D24"></path>
-                    </g>
-                </svg></div>
-                <div><svg preserveAspectRatio="xMidYMid meet" data-bbox="35 33 130 134" viewBox="35 33 130 134" height="150" width="150" xmlns="http://www.w3.org/2000/svg" data-type="tint" role="presentation" aria-hidden="true">
-                    <g>
-                        <path d="M66.9 120.9l2.5 4.1-12.7 7.8-2.5-4.1 12.7-7.8zm17.4-10.6l-10.7 6.5 2.5 4.1 10.9-6.7 7.1 1.8 1.2-4.6-6.3-1.6v-10h-4.8l.1 10.5zm46.9 14.8l12.4 3.1 1.2-4.6-12.4-3.1-1.2 4.6zM165 52.6v83L113.7 167 35 147.4v-83L86.3 33h.2L165 52.6zM84.3 93.2v-9.5L39.8 72.6v64.9l9.1-5.6 2.5 4.1-11.6 7.1v.6l71.1 17.7v-41.3l-10-2.5 1.2-4.6 8.9 2.2V90.3l-21.7-5.4v8.4l-5-.1zm28.6-7.4l47.3-29v-.6L89.1 38.6v9.3h-4.8v-8.1L39.8 67.1v.6l44.5 11.1v-1.6h4.8V80l23.8 5.8zm38.4 39.4l8.9 2.2V62.5l-44.5 27.2v26.6l10 2.5-1.2 4.6-8.9-2.2v38.9l44.5-27.2v-.6l-10-2.5 1.2-4.6zm-67-54.6h4.8V54.5h-4.8v16.1z" fill="#DE9D24"></path>
-                    </g>
-                </svg></div>
-            </div>
-        </div>
-    </section>
-    <section class="ekmeginasiluretiyoruz">
-        <div class="all">
-            <div class="all-left">
-                <h1>EKMEĞİMİZİ NASIL ÜRETİYORUZ?
-                </h1>
-                <h2>HER ŞEY TOHUMLA BAŞLIYOR!
-                </h2>
-                <h3>Ekmeğimizi eski ve yerel buğdayların taze olarak öğütülmüş unlarından üretiyoruz.
-                </h3>
-                <h3>Seçtiğimiz buğdayların her birinin bir hikayesi, kendine has tadı ve özellikleri var.
-                </h3>
-                <h3>Yerel çeşitliliğin sürmesi için, yerel buğdaylarla çalışmanın önemli olduğunu biliyoruz.
-                </h3>
-            </div>
-            <div class="all-right">
-
-            </div>
-        </div>
-    </section>
-</main>
-
+    </footer>
 </body>
+
 </html>
